fix: Close gap between P2 score box and name
- Adjust #p2Wrapper from 1218px to 1210px
- Both P1 and P2 score boxes now touch names symmetrically

--- a/_overlays/css/style.scss
+++ b/_overlays/css/style.scss
@@ -47,7 +47,7 @@ body {
   }
 
   #p2Wrapper {
-    left: 1218px;
+    left: 1210px;
   }
 
   .scores {
